Animation is not working correctly. TODO: Double-heck link between dashboard fragment and the layout.

--- a/app/src/main/res/layout/custom_layout_for_insertdata.xml
+++ b/app/src/main/res/layout/custom_layout_for_insertdata.xml
@@ -83,7 +83,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/typet_edt">
+                        android:id="@+id/type_edt">
 
                     </EditText>
 
@@ -120,9 +120,9 @@
                     android:layout_margin="10dp">
 
                     <EditText
+                        android:id="@+id/note_edt"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/note_edt">
+                        android:layout_height="wrap_content">
 
                     </EditText>
 
