--- a/app/src/main/res/layout/income_recycler_data.xml
+++ b/app/src/main/res/layout/income_recycler_data.xml
@@ -1,88 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="5dp"
     android:elevation="5dp"
-    android:layout_margin="5dp">
+    app:cardElevation="5dp"
+    android:layout_margin="5dp"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="1 May 2023"
-                android:textColor="@color/date_color"
-                android:textAppearance="?android:textAppearanceSmall"
+                android:text="6 June 2018"
+                android:layout_margin="5dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textStyle="bold"
-                android:id="@+id/date_txt_income">
-
-            </TextView>
+                android:id="@+id/date_txt_income"
+                android:textColor="@color/date_color"/>
 
         </RelativeLayout>
-
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2">
-
+            android:layout_weight="2"
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Type"
                 android:maxLines="1"
-                android:textColor="@color/black"
-                android:textAppearance="?android:textAppearanceSmall"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textStyle="bold"
-                android:id="@+id/type_txt_income">
-            </TextView>
-
+                android:id="@+id/type_txt_income"
+                android:textColor="@android:color/black"
+                />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Note"
+                android:text="Description"
                 android:maxLines="1"
-                android:textColor="@android:color/black"
-                android:textAppearance="?android:textAppearanceSmall"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textStyle="bold"
+                android:textColor="@android:color/black"
                 android:layout_below="@+id/type_txt_income"
-                android:id="@+id/note_txt_income">
-            </TextView>
-
-
-
+                android:id="@+id/note_txt_income"/>
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="600000.00"
-                android:textColor="@android:color/black"
-                android:textAppearance="?android:textAppearanceSmall"
+                android:text="600000"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textStyle="bold"
-                android:id="@+id/ammount_txt_income">
-
-            </TextView>
+                android:id="@+id/ammount_txt_income"
+                android:textColor="@color/date_color"/>
 
         </RelativeLayout>
 
     </LinearLayout>
-
-
 </androidx.cardview.widget.CardView>
